Fixed margins for circular text on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -286,13 +286,9 @@ img {
 
 @media (max-width: 768px) {
     .circular-text {
-        width: 280px !important;
-        height: 280px !important;
-        font-size: 0.75rem;
-    }
-
-    .circular-text span {
-        font-size: 1.2rem !important;
+        width: 500  px !important;
+        height: 500px !important;
+        font-size: 1.5rem;
     }
 
     .navbar {
@@ -342,12 +338,9 @@ img {
 
 @media (max-width: 480px) {
     .circular-text {
-        width: 240px !important;
-        height: 240px !important;
-    }
-
-    .circular-text span {
-        font-size: 1rem !important;
+        width: 300px !important;
+        height: 300px !important;
+        font-size: 1.5rem;
     }
 
     .navbar a {
